tests/invalid/function/generic_direct_call_infer_unresolved.facet
fn keep<T>(x: affine isize) -> affine isize {
  x
}

fn main() -> affine isize {
  (keep 1)
}
